[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/bowl1-01.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Food/FoodMaterial.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://SoundsAndMusic/HitPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 84, 40.5 )

[node name="Player" type="RigidBody2D"]
physics_material_override = ExtResource( 3 )
gravity_scale = 0.1
contacts_reported = 30
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.165267, 0.0498753 )
texture = ExtResource( 1 )

[node name="MotionTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -77, -18, -77, 2, -48, 15, 46, 15, 77, 2, 77, -17, 69, -17, 69, -2, 43, 8, -48, 7, -72, -1, -72, -18 )

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( -1, -30.5 )
shape = SubResource( 1 )

[node name="HitPlayer" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="MotionTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
[connection signal="body_exited" from="ScoreArea" to="." method="_on_ScoreArea_body_exited"]
